EMS: Added RecoveryContext class for passing configuration info to self-healing manager and the recovery tasks. Added RecoveryContext parameter in all RecoveryTask.runNodeRecovery() methods, and updated calling code accordingly. Added 'baseDir' field in BaguetteClientProperties (which are included in RecoveryContext). Replaced all occurrences of '/opt/baguette-client' in use (code and config. files) with placeholder ${BAGUETTE_CLIENT_BASE_DIR}. Few minor code improvements.